--- a/package.json
+++ b/package.json
@@ -28,10 +28,17 @@
 		"dist"
 	],
 	"scripts": {
-		"build": "tsup"
+		"build": "pnpm lint && tsup",
+		"build:watch": "tsup --watch",
+		"lint": "eslint"
 	},
 	"devDependencies": {
+		"@eslint/js": "^9.17.0",
+		"@types/node": "^22.10.2",
+		"eslint": "^9.17.0",
+		"globals": "^15.14.0",
 		"tsup": "^8.3.5",
-		"typescript": "^5.6.3"
+		"typescript": "^5.7.2",
+		"typescript-eslint": "^8.18.1"
 	}
 }
