fix: update bugs contact email in `package.json`

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
 	"homepage": "https://github.com/alessiofrittoli/server-sent-events#readme",
 	"bugs": {
 		"url": "https://github.com/alessiofrittoli/server-sent-events/issues",
-		"email": "project@hostname.com"
+		"email": "info@alessiofrittoli.it"
 	},
 	"repository": {
 		"type": "git",
