--- a/package.json
+++ b/package.json
@@ -32,9 +32,9 @@
 		"build:watch": "tsup --watch",
 		"lint": "eslint",
 		"release": "node scripts/publish.js --verbose --npm",
-		"test": "pnpm test:watch",
+		"test": "jest",
 		"test:watch": "jest --watchAll --verbose",
-		"test:jsdom": "JSDOM=true pnpm test",
+		"test:jsdom": "JSDOM=true pnpm test:watch",
 		"test:ci": "jest --ci --verbose",
 		"test:ci:jsdom": "JSDOM=true pnpm test:ci",
 		"test:coverage": "pnpm test:watch --coverage",
@@ -43,20 +43,20 @@
 		"test:coverage:serve": "concurrently --prefix none --kill-others \"pnpm test:coverage\" \"pnpm test:serve-coverage\"",
 		"test:coverage:jsdom": "JSDOM=true pnpm test:coverage",
 		"test:coverage:jsdom:serve": "JSDOM=true pnpm test:coverage:serve",
-		"test:jest": "pnpm test jest.test.ts",
-		"test:jest:jsdom": "JSDOM=true pnpm test:jest",
-		"test:server-events": "pnpm test server-events.test.ts"
+		"test:jest": "test:watch jest.test.ts",
+		"test:jest:jsdom": "JSDOM=true test:watch:jest",
+		"test:server-events": "test:watch server-events.test.ts"
 	},
 	"devDependencies": {
 		"@alessiofrittoli/node-scripts": "^2.2.1",
-		"@alessiofrittoli/stream-reader": "^1.1.0",
-		"@eslint/js": "^9.17.0",
+		"@alessiofrittoli/stream-reader": "^1.3.0",
+		"@eslint/js": "^9.18.0",
 		"@jest/globals": "^29.7.0",
 		"@types/jest": "^29.5.14",
-		"@types/node": "^22.10.2",
-		"concurrently": "^9.1.1",
+		"@types/node": "^22.10.7",
+		"concurrently": "^9.1.2",
 		"dotenv": "^16.4.7",
-		"eslint": "^9.17.0",
+		"eslint": "^9.18.0",
 		"globals": "^15.14.0",
 		"http-server": "^14.1.1",
 		"jest": "^29.7.0",
@@ -64,7 +64,7 @@
 		"ts-jest": "^29.2.5",
 		"ts-node": "^10.9.2",
 		"tsup": "^8.3.5",
-		"typescript": "^5.7.2",
-		"typescript-eslint": "^8.18.2"
+		"typescript": "^5.7.3",
+		"typescript-eslint": "^8.20.0"
 	}
 }
