--- a/package.json
+++ b/package.json
@@ -8,6 +8,12 @@
 		"url": "https://alessiofrittoli.it"
 	},
 	"license": "MIT",
+	"funding": [
+		{
+			"type": "github",
+			"url": "https://github.com/sponsors/alessiofrittoli"
+		}
+	],
 	"keywords": [
 		"server-sent-events",
 		"streaming"
@@ -28,23 +34,35 @@
 		"dist"
 	],
 	"scripts": {
+		"//1a": "*********************************************************************",
+		"//1b": "*********************** BUILD - LINT - RELEASE **********************",
+		"//1c": "*********************************************************************",
 		"build": "pnpm lint && pnpm test:ci && tsup",
 		"build:watch": "tsup --watch",
 		"lint": "eslint",
 		"release": "node scripts/publish.js --verbose --npm",
-		"test": "jest",
+		"//2a": "*********************************************************************",
+		"//2b": "***************************** UNIT TESTS ****************************",
+		"//2c": "*********************************************************************",
+		"test": "jest --verbose",
 		"test:watch": "jest --watchAll --verbose",
 		"test:jsdom": "JSDOM=true pnpm test:watch",
 		"test:ci": "jest --ci --verbose",
 		"test:ci:jsdom": "JSDOM=true pnpm test:ci",
+		"//3a": "*********************************************************************",
+		"//3b": "************************ UNIT TESTS COVERAGE ************************",
+		"//3c": "*********************************************************************",
 		"test:coverage": "pnpm test:watch --coverage",
 		"test:ci:coverage": "pnpm test:ci --coverage",
 		"test:serve-coverage": "http-server ./coverage/lcov-report --gzip true -p 0 -o --silent",
 		"test:coverage:serve": "concurrently --prefix none --kill-others \"pnpm test:coverage\" \"pnpm test:serve-coverage\"",
 		"test:coverage:jsdom": "JSDOM=true pnpm test:coverage",
 		"test:coverage:jsdom:serve": "JSDOM=true pnpm test:coverage:serve",
-		"test:jest": "test:watch jest.test.ts",
-		"test:jest:jsdom": "JSDOM=true test:watch:jest",
+		"//4a": "*********************************************************************",
+		"//4b": "************************ TARGETED UNIT TESTS ************************",
+		"//4c": "*********************************************************************",
+		"test:jest": "pnpm test:watch jest.test.ts",
+		"test:jest:jsdom": "JSDOM=true pnpm test:jest",
 		"test:server-events": "test:watch server-events.test.ts"
 	},
 	"devDependencies": {
