--- a/.github/workflows/tests-ci.yml
+++ b/.github/workflows/tests-ci.yml
@@ -18,10 +18,13 @@ jobs:
       with:
         node-version: 20.x
 
-    - name: Install deps and run tests
+    - name: Install dependencies
       run: |
         npm install -g pnpm@latest
         pnpm i
+
+    - name: Run tests
+      run: |
         pnpm test:ci:coverage
     
     - name: Report to Coveralls
