--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,8 +8,12 @@
 		"declaration": true,
 		"isolatedModules": true,
 		"outDir": "dist",
-		"target": "ES2017",
-		"lib": [ "dom", "dom.iterable", "esnext" ],
+		"target": "ES2020",
+		"lib": [
+			"dom",
+			"dom.iterable",
+			"esnext"
+		],
 		"allowJs": true,
 		"module": "ESNext",
 		"moduleResolution": "bundler",
@@ -22,9 +26,17 @@
 		"incremental": true,
 		"tsBuildInfoFile": ".tsbuildinfo",
 		"paths": {
-			"@/*": [ "./src/*" ]
+			"@/*": [
+				"./src/*"
+			]
 		}
 	},
-	"include": [ "src", "__tests__" ],
-	"exclude": [ "node_modules", "dist" ]
+	"include": [
+		"src",
+		"__tests__"
+	],
+	"exclude": [
+		"node_modules",
+		"dist"
+	]
 }
