--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,11 +9,7 @@
 		"isolatedModules": true,
 		"outDir": "dist",
 		"target": "ES2020",
-		"lib": [
-			"dom",
-			"dom.iterable",
-			"esnext"
-		],
+		"lib": [ "dom", "dom.iterable", "esnext" ],
 		"allowJs": true,
 		"module": "ESNext",
 		"moduleResolution": "bundler",
@@ -26,17 +22,9 @@
 		"incremental": true,
 		"tsBuildInfoFile": ".tsbuildinfo",
 		"paths": {
-			"@/*": [
-				"./src/*"
-			]
+			"@/*": [ "./src/*" ]
 		}
 	},
-	"include": [
-		"src",
-		"__tests__"
-	],
-	"exclude": [
-		"node_modules",
-		"dist"
-	]
+	"include": [ "src", "__tests__" ],
+	"exclude": [ "node_modules", "dist" ]
 }
