--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@alessiofrittoli/server-sent-events",
-	"version": "2.1.1",
+	"version": "2.2.0",
 	"description": "Class Based implementation for Server-Sent events",
 	"author": {
 		"name": "Alessio Frittoli",
@@ -46,47 +46,36 @@
 		"//2c": "*********************************************************************",
 		"test": "jest --verbose",
 		"test:watch": "jest --watchAll --verbose",
-		"test:jsdom": "JSDOM=true pnpm test:watch",
 		"test:ci": "jest --ci --verbose",
-		"test:ci:jsdom": "JSDOM=true pnpm test:ci",
 		"//3a": "*********************************************************************",
 		"//3b": "************************ UNIT TESTS COVERAGE ************************",
 		"//3c": "*********************************************************************",
 		"test:coverage": "pnpm test:watch --coverage",
 		"test:ci:coverage": "pnpm test:ci --coverage",
 		"test:serve-coverage": "http-server ./coverage/lcov-report --gzip true -p 0 -o --silent",
-		"test:coverage:serve": "concurrently --prefix none --kill-others \"pnpm test:coverage\" \"pnpm test:serve-coverage\"",
-		"test:coverage:jsdom": "JSDOM=true pnpm test:coverage",
-		"test:coverage:jsdom:serve": "JSDOM=true pnpm test:coverage:serve",
-		"//4a": "*********************************************************************",
-		"//4b": "************************ TARGETED UNIT TESTS ************************",
-		"//4c": "*********************************************************************",
-		"test:jest": "pnpm test:watch jest.test.ts",
-		"test:jest:jsdom": "JSDOM=true pnpm test:jest",
-		"test:server-events": "test:watch server-events.test.ts"
+		"test:coverage:serve": "concurrently --prefix none --kill-others \"pnpm test:coverage\" \"pnpm test:serve-coverage\""
 	},
 	"devDependencies": {
-		"@alessiofrittoli/node-scripts": "^2.3.1",
-		"@alessiofrittoli/stream-reader": "^2.2.1",
+		"@alessiofrittoli/node-scripts": "^2.4.0",
+		"@alessiofrittoli/stream-reader": "^2.3.0",
 		"@eslint/js": "^9.22.0",
 		"@jest/globals": "^29.7.0",
 		"@types/jest": "^29.5.14",
-		"@types/node": "^22.13.10",
+		"@types/node": "^22.13.11",
 		"concurrently": "^9.1.2",
 		"dotenv": "^16.4.7",
 		"eslint": "^9.22.0",
 		"globals": "^16.0.0",
 		"http-server": "^14.1.1",
 		"jest": "^29.7.0",
-		"jest-environment-jsdom": "^29.7.0",
 		"ts-jest": "^29.2.6",
 		"ts-node": "^10.9.2",
 		"tsup": "^8.4.0",
 		"typescript": "^5.8.2",
-		"typescript-eslint": "^8.26.1"
+		"typescript-eslint": "^8.27.0"
 	},
 	"dependencies": {
-		"@alessiofrittoli/stream-writer": "^1.1.1"
+		"@alessiofrittoli/stream-writer": "^1.2.0"
 	},
 	"pnpm": {
 		"onlyBuiltDependencies": [
