--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -6,7 +6,8 @@
 	"recommendations": [
 		"dbaeumer.vscode-eslint",
 		"davidanson.vscode-markdownlint",
-		"Orta.vscode-jest"
+		"Orta.vscode-jest",
+		"davidanson.vscode-markdownlint"
 	],
 	// List of extensions recommended by VS Code that should not be recommended for users of this workspace.
 	"unwantedRecommendations": []
